implements sign-provider with google oauth

--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@hapi/boom": "^8.0.1",
     "@hapi/joi": "^16.1.8",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
