authentication with twitter

--- a/ssr-server/.env.example
+++ b/ssr-server/.env.example
@@ -10,3 +10,10 @@ API_KEY_TOKEN=
 //GOOGLE AUTH
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+//SESSION
+SESSION_SECRET=
+
+//TWITTER AUTH
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
