--- a/ssr-server/package.json
+++ b/ssr-server/package.json
@@ -14,9 +14,11 @@
     "@hapi/boom": "^7.4.2",
     "axios": "^0.19.0",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "helmet": "^3.21.2",
     "lodash": "^4.17.11",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
